terraform/policies/disallow-default-serviceaccount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-service-account
  annotations:
    policies.kyverno.io/title: Disallow Default Service Account
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    cis-benchmark: "4.1.5"
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: default-service-account
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kube-public
          - kube-node-lease
          - kyverno
          - calico-system
          - aks-command
          - security
    validate:
      message: "Using 'default' service account is not recommended (CIS 4.1.5)"
      pattern:
        spec:
          =(serviceAccountName): "!default"
